deploy/environments/local/pgadmin-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: propertea-gateway
      namespace: kube-system
  hostnames:
    - pgadmin.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: pgadmin
          port: 80
          weight: 1
